test/testdata/functions/missing_three_args_error.lox
fun add(x, y, z) {
  print x + y + z;
}

add(); // error: add() missing 3 arguments: x, y, and z
